--- a/src/style.css
+++ b/src/style.css
@@ -59,19 +59,33 @@ nav ul {
   padding: 0;
   margin: 0;
   display: flex;
+  flex-direction: row;
+}
+
+nav ul ul {
+  display: none;
+}
+
+nav ul ul.visible {
+  display: block;
 }
 
 nav ul li {
   margin-left: 20px;
 }
 
-nav ul li a {
+nav ul li a,
+nav ul li button {
   color: #fff;
   text-decoration: none;
   font-size: 16px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li button:hover {
   text-decoration: underline;
 }
 
