--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
+/* general */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 header {
@@ -10,32 +13,50 @@ header {
   padding: 15px 20px;
 }
 
-.header-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 main {
   display: flex;
+  flex-wrap: wrap;
   z-index: 10;
+  box-sizing: border-box;
 }
 
 section {
   flex: 10 10 0;
   padding-bottom: 2em;
   width: 100%;
+  box-sizing: border-box;
 }
 
 aside {
   display: block;
   flex: 3 3 0;
   margin: 1em;
+  box-sizing: border-box;
+}
+
+footer {
+  background: #333;
+  color: #fff;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+/* header */
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .logo {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .logo img {
@@ -46,6 +67,7 @@ aside {
 .logo span {
   font-size: 24px;
   font-weight: bold;
+  word-wrap: break-word;
 }
 
 nav ul {
@@ -54,6 +76,7 @@ nav ul {
   margin: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 nav ul ul {
@@ -72,7 +95,7 @@ nav ul li a,
 nav ul li button {
   color: #fff;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 25px;
   background: none;
   border: none;
   cursor: pointer;
@@ -83,16 +106,19 @@ nav ul li button:hover {
   text-decoration: underline;
 }
 
+/* main */
+#cookies {
+  text-align: center;
+  font-size: smaller;
+  word-wrap: break-word;
+}
+
 #content {
   padding: 20px;
+  box-sizing: border-box;
 }
 
-footer {
-  background: #333;
-  color: #fff;
-  padding: 20px 0;
-}
-
+/* footer */
 .footer-content {
   display: flex;
   flex-direction: column;
@@ -101,12 +127,14 @@ footer {
   margin: auto;
   padding: 0 20px;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .footer-logo {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  flex-wrap: wrap;
 }
 
 .footer-logo img {
@@ -119,6 +147,7 @@ footer {
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+  flex-wrap: wrap;
 }
 
 .footer-social a {
@@ -135,13 +164,10 @@ footer {
 
 footer p {
   margin: 5px 0;
+  word-wrap: break-word;
 }
 
-#cookies {
-  text-align: center;
-  font-size: smaller;
-}
-
+/* mobile */
 @media screen and (max-width: 768px) {
   aside {
     display: none;
